src/test/ui/parser/issue-1802-2.stderr
error: no valid digits found for number
  --> $DIR/issue-1802-2.rs:3:16
   |
LL |     log(error, 0b_usize);
   |                ^^^

error: aborting due to previous error

